methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: type mismatch;
 found   : Int(0)
 required: String
  var x:String=0
               ^SlugTracking:7: error: type mismatch;
 found   : java.awt.Color
 required: String
    x=getCouleurSol():Color
                     ^SlugTracking:21: error: type mismatch;
 found   : java.awt.Color
 required: String
      x=getCouleurSol():Color
                       ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^